# ticker-man

./: README.md  ticker-man.cabal
src/: Lib.hs
